--- a/.qovery.yml
+++ b/.qovery.yml
@@ -1,7 +1,7 @@
 ---
 application:
   name: "videoencoder"
-  project: "xditya"
+  project: "PREM"
   organization: "QoveryCommunity"
 routers:
 - name: "main-videoencoder"
